--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2018-08-23 Thu 17:41 -->
+<!-- 2018-08-23 Thu 23:20 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title><span style="font-size: 60%; color: #460606;">R workshop for the</span><span style="font-size: 75%; color: #460606;"> International Ornithological Congress 2018</span></span><br>Better practices in R,<br>no more copy-paste, no more loops</title>
@@ -654,19 +654,19 @@ for the JavaScript code in this tag.
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents">
 <ul>
-<li><a href="#orgd0ddbe8">A. Program</a>
+<li><a href="#org6f73d81">A. Program</a>
 <ul>
-<li><a href="#org15c46be">1. Portability, reproducibility, and readability</a></li>
-<li><a href="#org85f0292">2. Functional programming</a></li>
-<li><a href="#orgfe5385f">3. (Bonus if time allows): <code class="src src-R">magrittr</code> less used pipes</a></li>
+<li><a href="#org12232a2">1. Portability, reproducibility, and readability</a></li>
+<li><a href="#org76ed790">2. Functional programming</a></li>
+<li><a href="#org6ee5dfd">3. (Bonus if time allows): <code class="src src-R">magrittr</code> less used pipes</a></li>
 </ul>
 </li>
-<li><a href="#org93f9d93">B. Logistical considerations</a>
+<li><a href="#org86518c9">B. Logistical considerations</a>
 <ul>
-<li><a href="#orgf9c536a">Target audience</a></li>
-<li><a href="#org5a5901c">Where and when?</a></li>
-<li><a href="#org8c15681">No fee nor registration</a></li>
-<li><a href="#org9767587">Software requirements</a></li>
+<li><a href="#org63988e0">Target audience</a></li>
+<li><a href="#orgc7de86e">Where and when?</a></li>
+<li><a href="#orgbeba171">No fee nor registration</a></li>
+<li><a href="#org76b0160">Software requirements</a></li>
 </ul>
 </li>
 </ul>
@@ -680,13 +680,13 @@ Most of us biologists do not learn R properly: we do not have a computing scienc
 This workshop focuses on two sets of considerations important for writing better code:<br />
 </p>
 
-<div id="outline-container-orgd0ddbe8" class="outline-2">
-<h2 id="orgd0ddbe8">A. Program</h2>
-<div class="outline-text-2" id="text-orgd0ddbe8">
+<div id="outline-container-org6f73d81" class="outline-2">
+<h2 id="org6f73d81">A. Program</h2>
+<div class="outline-text-2" id="text-org6f73d81">
 </div>
-<div id="outline-container-org15c46be" class="outline-3">
-<h3 id="org15c46be">1. Portability, reproducibility, and readability</h3>
-<div class="outline-text-3" id="text-org15c46be">
+<div id="outline-container-org12232a2" class="outline-3">
+<h3 id="org12232a2">1. Portability, reproducibility, and readability</h3>
+<div class="outline-text-3" id="text-org12232a2">
 <p>
 Code that is portable, reproducible, and readable is critical when collaborating on projects. At the start of this workshop, we will briefly go over:<br />
 </p>
@@ -703,9 +703,9 @@ The workshop material can be found <a href="https://prosoitos.github.io/r_worksh
 </div>
 </div>
 
-<div id="outline-container-org85f0292" class="outline-3">
-<h3 id="org85f0292">2. Functional programming</h3>
-<div class="outline-text-3" id="text-org85f0292">
+<div id="outline-container-org76ed790" class="outline-3">
+<h3 id="org76ed790">2. Functional programming</h3>
+<div class="outline-text-3" id="text-org76ed790">
 <p>
 What do you do when you need to apply the same treatment to multiple datasets or multiple variables within a dataset?<br />
 </p>
@@ -734,14 +734,14 @@ Most of our workshop time will focus on:<br />
 </ul>
 
 <p>
-The workshop material (without the solutions to the short challenges) can be found <a href="https://prosoitos.github.io/r_workshop_international-ornithological-congress/r_functional-programming_no-answer.html">here</a>. I will post the version with the challenge answers at the end of the workshop.<br />
+The workshop material (without the solutions to the short challenges) can be found <a href="https://prosoitos.github.io/r_workshop_international-ornithological-congress/r_functional-programming_with-answers.html">here</a>. I will post the version with the challenge answers at the end of the workshop.<br />
 </p>
 </div>
 </div>
 
-<div id="outline-container-orgfe5385f" class="outline-3">
-<h3 id="orgfe5385f">3. (Bonus if time allows): <code class="src src-R">magrittr</code> less used pipes</h3>
-<div class="outline-text-3" id="text-orgfe5385f">
+<div id="outline-container-org6ee5dfd" class="outline-3">
+<h3 id="org6ee5dfd">3. (Bonus if time allows): <code class="src src-R">magrittr</code> less used pipes</h3>
+<div class="outline-text-3" id="text-org6ee5dfd">
 <p>
 The workshop material can be found <a href="https://prosoitos.github.io/r_workshop_international-ornithological-congress/r_magrittr-bonus.html">here</a>.<br />
 </p>
@@ -749,13 +749,13 @@ The workshop material can be found <a href="https://prosoitos.github.io/r_worksh
 </div>
 </div>
 
-<div id="outline-container-org93f9d93" class="outline-2">
-<h2 id="org93f9d93">B. Logistical considerations</h2>
-<div class="outline-text-2" id="text-org93f9d93">
+<div id="outline-container-org86518c9" class="outline-2">
+<h2 id="org86518c9">B. Logistical considerations</h2>
+<div class="outline-text-2" id="text-org86518c9">
 </div>
-<div id="outline-container-orgf9c536a" class="outline-3">
-<h3 id="orgf9c536a">Target audience</h3>
-<div class="outline-text-3" id="text-orgf9c536a">
+<div id="outline-container-org63988e0" class="outline-3">
+<h3 id="org63988e0">Target audience</h3>
+<div class="outline-text-3" id="text-org63988e0">
 <ul class="org-ul">
 <li>Intermediate R users comfortable with basic data manipulation and simple functions,<br /></li>
 <li>Advanced users familiar with functional programming using the family of the <code class="src src-R"><span class="org-ess-function-call">apply</span><span class="org-ess-paren"><span class="org-rainbow-delimiters-depth-1">()</span></span></code> functions and interested in discovering the "purrring" way.<br /></li>
@@ -763,9 +763,9 @@ The workshop material can be found <a href="https://prosoitos.github.io/r_worksh
 </div>
 </div>
 
-<div id="outline-container-org5a5901c" class="outline-3">
-<h3 id="org5a5901c">Where and when?</h3>
-<div class="outline-text-3" id="text-org5a5901c">
+<div id="outline-container-orgc7de86e" class="outline-3">
+<h3 id="orgc7de86e">Where and when?</h3>
+<div class="outline-text-3" id="text-orgc7de86e">
 <p>
 <b>Date:</b> Thursday 23<br />
 <b>Time:</b> 8pm-10pm<br />
@@ -774,18 +774,18 @@ The workshop material can be found <a href="https://prosoitos.github.io/r_worksh
 </div>
 </div>
 
-<div id="outline-container-org8c15681" class="outline-3">
-<h3 id="org8c15681">No fee nor registration</h3>
-<div class="outline-text-3" id="text-org8c15681">
+<div id="outline-container-orgbeba171" class="outline-3">
+<h3 id="orgbeba171">No fee nor registration</h3>
+<div class="outline-text-3" id="text-orgbeba171">
 <p>
 There is no fee nor registration for this event. Simply join us with your laptop ready for the workshop (see below).<br />
 </p>
 </div>
 </div>
 
-<div id="outline-container-org9767587" class="outline-3">
-<h3 id="org9767587">Software requirements</h3>
-<div class="outline-text-3" id="text-org9767587">
+<div id="outline-container-org76b0160" class="outline-3">
+<h3 id="org76b0160">Software requirements</h3>
+<div class="outline-text-3" id="text-org76b0160">
 <p>
 In order to make the best of this workshop, please bring a laptop with the following installed:<br />
 </p>
