--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2018-08-24 Fri 00:17 -->
+<!-- 2018-08-24 Fri 15:21 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title><span style="font-size: 60%; color: #460606;">R workshop for the</span><span style="font-size: 75%; color: #460606;"> International Ornithological Congress 2018</span></span><br>Better practices in R,<br>no more copy-paste, no more loops</title>
@@ -654,19 +654,19 @@ for the JavaScript code in this tag.
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents">
 <ul>
-<li><a href="#org2899ac8">A. Program</a>
+<li><a href="#org3a9d66c">A. Program</a>
 <ul>
-<li><a href="#orgc9883b4">1. Portability, reproducibility, and readability</a></li>
-<li><a href="#orgb465acd">2. Functional programming</a></li>
-<li><a href="#org030133b">Bonus: <code class="src src-R">magrittr</code> less used pipes</a></li>
+<li><a href="#org2cebd0c">1. Portability, reproducibility, and readability</a></li>
+<li><a href="#org2e32c48">2. Functional programming</a></li>
+<li><a href="#orgbbd6555">Bonus: <code class="src src-R">magrittr</code> less used pipes</a></li>
 </ul>
 </li>
-<li><a href="#org7fec390">B. Logistical considerations</a>
+<li><a href="#orgdadd66b">B. Logistical considerations</a>
 <ul>
-<li><a href="#orgae83db0">Target audience</a></li>
-<li><a href="#org7239cd5">Where and when?</a></li>
-<li><a href="#orgc8f0249">No fee nor registration</a></li>
-<li><a href="#orga83baba">Software requirements</a></li>
+<li><a href="#org69ff845">Target audience</a></li>
+<li><a href="#orgf85440f">Where and when?</a></li>
+<li><a href="#orgc802061">No fee nor registration</a></li>
+<li><a href="#orgcf7e73d">Software requirements</a></li>
 </ul>
 </li>
 </ul>
@@ -680,13 +680,18 @@ Most of us biologists do not learn R properly: we do not have a computing scienc
 This workshop focuses on two sets of considerations important for writing better code:<br />
 </p>
 
-<div id="outline-container-org2899ac8" class="outline-2">
-<h2 id="org2899ac8">A. Program</h2>
-<div class="outline-text-2" id="text-org2899ac8">
+<ul class="org-ul">
+<li>portability, reproducibility, and readability of code<br /></li>
+<li>functional programming<br /></li>
+</ul>
+
+<div id="outline-container-org3a9d66c" class="outline-2">
+<h2 id="org3a9d66c">A. Program</h2>
+<div class="outline-text-2" id="text-org3a9d66c">
 </div>
-<div id="outline-container-orgc9883b4" class="outline-3">
-<h3 id="orgc9883b4">1. Portability, reproducibility, and readability</h3>
-<div class="outline-text-3" id="text-orgc9883b4">
+<div id="outline-container-org2cebd0c" class="outline-3">
+<h3 id="org2cebd0c">1. Portability, reproducibility, and readability</h3>
+<div class="outline-text-3" id="text-org2cebd0c">
 <p>
 Code that is portable, reproducible, and readable is critical when collaborating on projects. At the start of this workshop, we will briefly go over:<br />
 </p>
@@ -703,9 +708,9 @@ The workshop material can be found <a href="https://prosoitos.github.io/r_worksh
 </div>
 </div>
 
-<div id="outline-container-orgb465acd" class="outline-3">
-<h3 id="orgb465acd">2. Functional programming</h3>
-<div class="outline-text-3" id="text-orgb465acd">
+<div id="outline-container-org2e32c48" class="outline-3">
+<h3 id="org2e32c48">2. Functional programming</h3>
+<div class="outline-text-3" id="text-org2e32c48">
 <p>
 What do you do when you need to apply the same treatment to multiple datasets or multiple variables within a dataset?<br />
 </p>
@@ -739,9 +744,9 @@ The workshop material (without the solutions to the short challenges) can be fou
 </div>
 </div>
 
-<div id="outline-container-org030133b" class="outline-3">
-<h3 id="org030133b">Bonus: <code class="src src-R">magrittr</code> less used pipes</h3>
-<div class="outline-text-3" id="text-org030133b">
+<div id="outline-container-orgbbd6555" class="outline-3">
+<h3 id="orgbbd6555">Bonus: <code class="src src-R">magrittr</code> less used pipes</h3>
+<div class="outline-text-3" id="text-orgbbd6555">
 <p>
 The workshop material can be found <a href="https://prosoitos.github.io/r_workshop_international-ornithological-congress/r_magrittr-bonus.html">here</a>.<br />
 </p>
@@ -749,13 +754,13 @@ The workshop material can be found <a href="https://prosoitos.github.io/r_worksh
 </div>
 </div>
 
-<div id="outline-container-org7fec390" class="outline-2">
-<h2 id="org7fec390">B. Logistical considerations</h2>
-<div class="outline-text-2" id="text-org7fec390">
+<div id="outline-container-orgdadd66b" class="outline-2">
+<h2 id="orgdadd66b">B. Logistical considerations</h2>
+<div class="outline-text-2" id="text-orgdadd66b">
 </div>
-<div id="outline-container-orgae83db0" class="outline-3">
-<h3 id="orgae83db0">Target audience</h3>
-<div class="outline-text-3" id="text-orgae83db0">
+<div id="outline-container-org69ff845" class="outline-3">
+<h3 id="org69ff845">Target audience</h3>
+<div class="outline-text-3" id="text-org69ff845">
 <ul class="org-ul">
 <li>Intermediate R users comfortable with basic data manipulation and simple functions,<br /></li>
 <li>Advanced users familiar with functional programming using the family of the <code class="src src-R"><span class="org-ess-function-call">apply</span><span class="org-ess-paren"><span class="org-rainbow-delimiters-depth-1">()</span></span></code> functions and interested in discovering the "purrring" way.<br /></li>
@@ -763,9 +768,9 @@ The workshop material can be found <a href="https://prosoitos.github.io/r_worksh
 </div>
 </div>
 
-<div id="outline-container-org7239cd5" class="outline-3">
-<h3 id="org7239cd5">Where and when?</h3>
-<div class="outline-text-3" id="text-org7239cd5">
+<div id="outline-container-orgf85440f" class="outline-3">
+<h3 id="orgf85440f">Where and when?</h3>
+<div class="outline-text-3" id="text-orgf85440f">
 <p>
 <b>Date:</b> Thursday 23<br />
 <b>Time:</b> 8pm-10pm<br />
@@ -774,18 +779,18 @@ The workshop material can be found <a href="https://prosoitos.github.io/r_worksh
 </div>
 </div>
 
-<div id="outline-container-orgc8f0249" class="outline-3">
-<h3 id="orgc8f0249">No fee nor registration</h3>
-<div class="outline-text-3" id="text-orgc8f0249">
+<div id="outline-container-orgc802061" class="outline-3">
+<h3 id="orgc802061">No fee nor registration</h3>
+<div class="outline-text-3" id="text-orgc802061">
 <p>
 There is no fee nor registration for this event. Simply join us with your laptop ready for the workshop (see below).<br />
 </p>
 </div>
 </div>
 
-<div id="outline-container-orga83baba" class="outline-3">
-<h3 id="orga83baba">Software requirements</h3>
-<div class="outline-text-3" id="text-orga83baba">
+<div id="outline-container-orgcf7e73d" class="outline-3">
+<h3 id="orgcf7e73d">Software requirements</h3>
+<div class="outline-text-3" id="text-orgcf7e73d">
 <p>
 In order to make the best of this workshop, please bring a laptop with the following installed:<br />
 </p>
