--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2018-08-24 Fri 15:21 -->
+<!-- 2018-08-24 Fri 15:47 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title><span style="font-size: 60%; color: #460606;">R workshop for the</span><span style="font-size: 75%; color: #460606;"> International Ornithological Congress 2018</span></span><br>Better practices in R,<br>no more copy-paste, no more loops</title>
@@ -646,7 +646,7 @@ for the JavaScript code in this tag.
 </head>
 <body>
 <div id="preamble" class="status">
-<span style="color:#596a73; font-size:17px"><b>Marie-Hélène Burle</b></span><br><span style="color:#596a73; font-size:15px"><img src="./email.ico" alt="email" height="16" width="16"> <a href="mailto:msb2@sfu.ca">msb2@sfu.ca</a>&nbsp;&nbsp;<img src="./twitter.ico" alt="twitter" height="17" width="17"> <a href="https://twitter.com/MHBurle">@MHBurle</a>&nbsp;&nbsp;<img src="./gh.ico" alt="github" height="15" width="15"> <a href="https://github.com/prosoitos">prosoitos</a></span><br><span style="color:#596a73; font-size:16px">August 24, 2018</span>
+<span style="color:#596a73; font-size:17px"><b>Marie-Hélène Burle</b></span><br><span style="color:#596a73; font-size:15px"><img src="./favicons/email.ico" alt="email" height="16" width="16"> <a href="mailto:msb2@sfu.ca">msb2@sfu.ca</a>&nbsp;&nbsp;<img src="./favicons/twitter.ico" alt="twitter" height="17" width="17"> <a href="https://twitter.com/MHBurle">@MHBurle</a>&nbsp;&nbsp;<img src="./favicons/gh.ico" alt="github" height="15" width="15"> <a href="https://github.com/prosoitos">prosoitos</a></span><br><span style="color:#596a73; font-size:16px">August 24, 2018</span>
 </div>
 <div id="content">
 <h1 class="title"><span style="font-size: 60%; color: #460606;">R workshop for the</span><span style="font-size: 75%; color: #460606;"> International Ornithological Congress 2018</span></span><br>Better practices in R,<br>no more copy-paste, no more loops</h1>
@@ -654,19 +654,19 @@ for the JavaScript code in this tag.
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents">
 <ul>
-<li><a href="#org3a9d66c">A. Program</a>
+<li><a href="#orgd8779b6">A. Program</a>
 <ul>
-<li><a href="#org2cebd0c">1. Portability, reproducibility, and readability</a></li>
-<li><a href="#org2e32c48">2. Functional programming</a></li>
-<li><a href="#orgbbd6555">Bonus: <code class="src src-R">magrittr</code> less used pipes</a></li>
+<li><a href="#org55327df">1. Portability, reproducibility, and readability</a></li>
+<li><a href="#orgaf08403">2. Functional programming</a></li>
+<li><a href="#org3b04362">Bonus: <code class="src src-R">magrittr</code> less used pipes</a></li>
 </ul>
 </li>
-<li><a href="#orgdadd66b">B. Logistical considerations</a>
+<li><a href="#orgea73dff">B. Logistical considerations</a>
 <ul>
-<li><a href="#org69ff845">Target audience</a></li>
-<li><a href="#orgf85440f">Where and when?</a></li>
-<li><a href="#orgc802061">No fee nor registration</a></li>
-<li><a href="#orgcf7e73d">Software requirements</a></li>
+<li><a href="#org5db32c4">Target audience</a></li>
+<li><a href="#orgb2222c2">Where and when?</a></li>
+<li><a href="#orgc2302b7">No fee nor registration</a></li>
+<li><a href="#org0f89f2c">Software requirements</a></li>
 </ul>
 </li>
 </ul>
@@ -685,13 +685,13 @@ This workshop focuses on two sets of considerations important for writing better
 <li>functional programming<br /></li>
 </ul>
 
-<div id="outline-container-org3a9d66c" class="outline-2">
-<h2 id="org3a9d66c">A. Program</h2>
-<div class="outline-text-2" id="text-org3a9d66c">
+<div id="outline-container-orgd8779b6" class="outline-2">
+<h2 id="orgd8779b6">A. Program</h2>
+<div class="outline-text-2" id="text-orgd8779b6">
 </div>
-<div id="outline-container-org2cebd0c" class="outline-3">
-<h3 id="org2cebd0c">1. Portability, reproducibility, and readability</h3>
-<div class="outline-text-3" id="text-org2cebd0c">
+<div id="outline-container-org55327df" class="outline-3">
+<h3 id="org55327df">1. Portability, reproducibility, and readability</h3>
+<div class="outline-text-3" id="text-org55327df">
 <p>
 Code that is portable, reproducible, and readable is critical when collaborating on projects. At the start of this workshop, we will briefly go over:<br />
 </p>
@@ -708,9 +708,9 @@ The workshop material can be found <a href="https://prosoitos.github.io/r_worksh
 </div>
 </div>
 
-<div id="outline-container-org2e32c48" class="outline-3">
-<h3 id="org2e32c48">2. Functional programming</h3>
-<div class="outline-text-3" id="text-org2e32c48">
+<div id="outline-container-orgaf08403" class="outline-3">
+<h3 id="orgaf08403">2. Functional programming</h3>
+<div class="outline-text-3" id="text-orgaf08403">
 <p>
 What do you do when you need to apply the same treatment to multiple datasets or multiple variables within a dataset?<br />
 </p>
@@ -744,9 +744,9 @@ The workshop material (without the solutions to the short challenges) can be fou
 </div>
 </div>
 
-<div id="outline-container-orgbbd6555" class="outline-3">
-<h3 id="orgbbd6555">Bonus: <code class="src src-R">magrittr</code> less used pipes</h3>
-<div class="outline-text-3" id="text-orgbbd6555">
+<div id="outline-container-org3b04362" class="outline-3">
+<h3 id="org3b04362">Bonus: <code class="src src-R">magrittr</code> less used pipes</h3>
+<div class="outline-text-3" id="text-org3b04362">
 <p>
 The workshop material can be found <a href="https://prosoitos.github.io/r_workshop_international-ornithological-congress/r_magrittr-bonus.html">here</a>.<br />
 </p>
@@ -754,13 +754,13 @@ The workshop material can be found <a href="https://prosoitos.github.io/r_worksh
 </div>
 </div>
 
-<div id="outline-container-orgdadd66b" class="outline-2">
-<h2 id="orgdadd66b">B. Logistical considerations</h2>
-<div class="outline-text-2" id="text-orgdadd66b">
+<div id="outline-container-orgea73dff" class="outline-2">
+<h2 id="orgea73dff">B. Logistical considerations</h2>
+<div class="outline-text-2" id="text-orgea73dff">
 </div>
-<div id="outline-container-org69ff845" class="outline-3">
-<h3 id="org69ff845">Target audience</h3>
-<div class="outline-text-3" id="text-org69ff845">
+<div id="outline-container-org5db32c4" class="outline-3">
+<h3 id="org5db32c4">Target audience</h3>
+<div class="outline-text-3" id="text-org5db32c4">
 <ul class="org-ul">
 <li>Intermediate R users comfortable with basic data manipulation and simple functions,<br /></li>
 <li>Advanced users familiar with functional programming using the family of the <code class="src src-R"><span class="org-ess-function-call">apply</span><span class="org-ess-paren"><span class="org-rainbow-delimiters-depth-1">()</span></span></code> functions and interested in discovering the "purrring" way.<br /></li>
@@ -768,9 +768,9 @@ The workshop material can be found <a href="https://prosoitos.github.io/r_worksh
 </div>
 </div>
 
-<div id="outline-container-orgf85440f" class="outline-3">
-<h3 id="orgf85440f">Where and when?</h3>
-<div class="outline-text-3" id="text-orgf85440f">
+<div id="outline-container-orgb2222c2" class="outline-3">
+<h3 id="orgb2222c2">Where and when?</h3>
+<div class="outline-text-3" id="text-orgb2222c2">
 <p>
 <b>Date:</b> Thursday 23<br />
 <b>Time:</b> 8pm-10pm<br />
@@ -779,18 +779,18 @@ The workshop material can be found <a href="https://prosoitos.github.io/r_worksh
 </div>
 </div>
 
-<div id="outline-container-orgc802061" class="outline-3">
-<h3 id="orgc802061">No fee nor registration</h3>
-<div class="outline-text-3" id="text-orgc802061">
+<div id="outline-container-orgc2302b7" class="outline-3">
+<h3 id="orgc2302b7">No fee nor registration</h3>
+<div class="outline-text-3" id="text-orgc2302b7">
 <p>
 There is no fee nor registration for this event. Simply join us with your laptop ready for the workshop (see below).<br />
 </p>
 </div>
 </div>
 
-<div id="outline-container-orgcf7e73d" class="outline-3">
-<h3 id="orgcf7e73d">Software requirements</h3>
-<div class="outline-text-3" id="text-orgcf7e73d">
+<div id="outline-container-org0f89f2c" class="outline-3">
+<h3 id="org0f89f2c">Software requirements</h3>
+<div class="outline-text-3" id="text-org0f89f2c">
 <p>
 In order to make the best of this workshop, please bring a laptop with the following installed:<br />
 </p>
